feat: Added terminal console utilities
(cherry picked from commit 373c8cb9607b41a1cf6e55a1ac4a9045b823fe61)

--- a/modules/common/utils/CMakeLists.txt
+++ b/modules/common/utils/CMakeLists.txt
@@ -13,10 +13,12 @@ configure_file(src/version.in ${CMAKE_CURRENT_SOURCE_DIR}/src/version_impl.h @ON
 # library sources
 set(SOURCES
         src/command_line_args.cpp
+        src/conio.cpp
         src/version.cpp
         src/utils.cpp
         README.md
         include/grape/utils/command_line_args.h
+        include/grape/utils/conio.h
         include/grape/utils/utils.h
         include/grape/utils/version.h)
 
