--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -23,13 +23,16 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/../cmake
 set_directory_properties(PROPERTIES EP_UPDATE_DISCONNECTED 1)   # skip update step
 
 # Collect common arguments to configure external projects
-set(EP_CMAKE_EXTRA_ARGS ${EP_CMAKE_EXTRA_ARGS} -DCMAKE_BUILD_TYPE=Release) # Only want release builds
-set(EP_CMAKE_EXTRA_ARGS ${EP_CMAKE_EXTRA_ARGS} -DCMAKE_INSTALL_RPATH=${CMAKE_INSTALL_RPATH})
-set(EP_CMAKE_EXTRA_ARGS ${EP_CMAKE_EXTRA_ARGS} -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS})
-set(EP_CMAKE_EXTRA_ARGS ${EP_CMAKE_EXTRA_ARGS} -DCMAKE_PREFIX_PATH=${CMAKE_PREFIX_PATH})
-set(EP_CMAKE_EXTRA_ARGS ${EP_CMAKE_EXTRA_ARGS} -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX})
-set(EP_CMAKE_EXTRA_ARGS ${EP_CMAKE_EXTRA_ARGS} -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE})
-set(EP_CMAKE_EXTRA_ARGS ${EP_CMAKE_EXTRA_ARGS} -DCMAKE_CXX_COMPILER_LAUNCHER=${CMAKE_CXX_COMPILER_LAUNCHER})
+set(EP_CMAKE_EXTRA_ARGS
+    -DCMAKE_BUILD_TYPE=Release
+    -DCMAKE_INSTALL_RPATH=${CMAKE_INSTALL_RPATH}
+    -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS}
+    -DCMAKE_PREFIX_PATH=${CMAKE_PREFIX_PATH}
+    -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}
+    -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
+    -DCMAKE_CXX_COMPILER_LAUNCHER=${CMAKE_CXX_COMPILER_LAUNCHER}
+    -DCMAKE_C_COMPILER_LAUNCHER=${CMAKE_C_COMPILER_LAUNCHER}
+    -DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD})
 
 # helper macro useful for dependency handling
 macro(add_dummy_target)
