--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@
 #=================================================================================================
 
 cmake_minimum_required(VERSION 3.26)
-project(grape LANGUAGES CXX)
+project(grape LANGUAGES CXX C)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
