refactor: Makes command line parser strict
(cherry picked from commit 8c9944af846bd13bb2ef0f990c9549f5e5ec59e2)

--- a/modules/common/conio/CMakeLists.txt
+++ b/modules/common/conio/CMakeLists.txt
@@ -2,26 +2,23 @@
 # Copyright (C) 2018-2023 GRAPE Contributors
 #=================================================================================================
 
-declare_module(NAME utils 
+declare_module(NAME conio 
   ALWAYS_BUILD 
-  DEPENDS_ON_MODULES "" # **Note**: This module should not depend on any other module
+  DEPENDS_ON_MODULES utils base
   DEPENDS_ON_EXTERNAL_PROJECTS "")
-
-# generate version header
-configure_file(src/version.in ${CMAKE_CURRENT_SOURCE_DIR}/src/version_impl.h @ONLY)
 
 # library sources
 set(SOURCES
-        src/version.cpp
-        src/utils.cpp
+        src/program_options.cpp
+        src/conio.cpp
         README.md
-        include/grape/utils/utils.h
-        include/grape/utils/version.h)
+        include/grape/conio/program_options.h
+        include/grape/conio/conio.h)
 
 # library target
 define_module_library(
-        NAME utils
-        PUBLIC_LINK_LIBS ""
+        NAME conio
+        PUBLIC_LINK_LIBS grape::utils grape::base
         PRIVATE_LINK_LIBS ""
         SOURCES ${SOURCES}
         PUBLIC_INCLUDE_PATHS
@@ -33,4 +30,3 @@ define_module_library(
 # Subprojects
 add_subdirectory(tests)
 add_subdirectory(examples)
-add_subdirectory(apps)
