--- a/modules/common/ipc/apps/CMakeLists.txt
+++ b/modules/common/ipc/apps/CMakeLists.txt
@@ -7,4 +7,4 @@ define_module_executable(
         SOURCES zenoh_router.cpp
         PUBLIC_INCLUDE_PATHS
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
-        PUBLIC_LINK_LIBS grape::utils)
+        PUBLIC_LINK_LIBS grape::conio)
