--- a/modules/common/utils/tests/CMakeLists.txt
+++ b/modules/common/utils/tests/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 define_module_test(
         NAME tests
-        SOURCES tests.cpp
+        SOURCES utils_tests.cpp 
         PUBLIC_INCLUDE_PATHS
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
         PUBLIC_LINK_LIBS "")
