fix: Update script module for static builds
(cherry picked from commit ff677660d2a09f6242df71b543bf81ccbb9b1a02)

--- a/modules/common/script/CMakeLists.txt
+++ b/modules/common/script/CMakeLists.txt
@@ -14,7 +14,8 @@ set(SOURCES
 define_module_library(
         NAME script
         PUBLIC_LINK_LIBS grape::base
-        PRIVATE_LINK_LIBS lualib
+        PRIVATE_LINK_LIBS 
+          $<BUILD_LOCAL_INTERFACE:lualib>
         SOURCES 
           ${SOURCES}
         PUBLIC_INCLUDE_PATHS
