feat: Adds RT friendly thread facility
(cherry picked from commit c8202cade2fec5625747ac39d53ab2fb8baa1321)

--- a/modules/common/realtime/CMakeLists.txt
+++ b/modules/common/realtime/CMakeLists.txt
@@ -10,7 +10,8 @@ set(SOURCES
         README.md
         include/grape/realtime/mpsc_queue.h
         include/grape/realtime/mutex.h
-        include/grape/realtime/realtime.h)
+        include/grape/realtime/realtime.h
+        include/grape/realtime/thread.h)
 
 # library target
 define_module_library(
