--- a/modules/common/realtime/examples/CMakeLists.txt
+++ b/modules/common/realtime/examples/CMakeLists.txt
@@ -8,3 +8,11 @@ define_module_example(
         PUBLIC_INCLUDE_PATHS
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
         PUBLIC_LINK_LIBS "")
+
+define_module_example(
+        NAME thread_example
+        SOURCES thread_example.cpp
+        PUBLIC_INCLUDE_PATHS
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
+        PUBLIC_LINK_LIBS "")
+        
