--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON) # Required for shared libraries
+set(CMAKE_UNITY_BUILD TRUE)
 
 # Integrate the Grape Build System to setup the project
 include(${CMAKE_SOURCE_DIR}/gbs/gbs.cmake)
