feat: Introduces fifo buffer
(cherry picked from commit 093703f7369c19e7928050f3846b71acaf46f869)

--- a/modules/common/realtime/CMakeLists.txt
+++ b/modules/common/realtime/CMakeLists.txt
@@ -8,6 +8,7 @@ declare_module(NAME realtime DEPENDS_ON_MODULES "base" DEPENDS_ON_EXTERNAL_PROJE
 set(SOURCES
         src/realtime.cpp
         README.md
+        include/grape/realtime/fifo_buffer.h
         include/grape/realtime/fixed_string.h
         include/grape/realtime/mpsc_queue.h
         include/grape/realtime/mutex.h
