--- a/modules/common/realtime/examples/CMakeLists.txt
+++ b/modules/common/realtime/examples/CMakeLists.txt
@@ -10,6 +10,13 @@ define_module_example(
         PUBLIC_LINK_LIBS "")
 
 define_module_example(
+        NAME fifo_buffer_example
+        SOURCES fifo_buffer_example.cpp
+        PUBLIC_INCLUDE_PATHS
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
+        PUBLIC_LINK_LIBS "")
+
+define_module_example(
         NAME string_example
         SOURCES string_example.cpp
         PUBLIC_INCLUDE_PATHS
