--- a/modules/common/realtime/tests/CMakeLists.txt
+++ b/modules/common/realtime/tests/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 define_module_test(
         NAME tests
-        SOURCES mpscq_tests.cpp string_tests.cpp mutex_tests.cpp
+        SOURCES mpscq_tests.cpp fifo_buffer_tests.cpp string_tests.cpp mutex_tests.cpp
         PUBLIC_INCLUDE_PATHS
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
         PUBLIC_LINK_LIBS "")
