--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -58,7 +58,7 @@ if(zenohcxx IN_LIST EXTERNAL_PROJECTS_LIST)
     ExternalProject_Add(
       zenohc
       GIT_REPOSITORY "https://github.com/eclipse-zenoh/zenoh-c.git"
-      GIT_TAG master # v${zenohc_VERION_REQUIRED}
+      GIT_TAG main # v${zenohc_VERION_REQUIRED}
       GIT_SHALLOW true
       CMAKE_ARGS ${EP_CMAKE_EXTRA_ARGS} -DCMAKE_VERBOSE_MAKEFILE=ON)
   endif()
