--- a/modules/common/conio/examples/CMakeLists.txt
+++ b/modules/common/conio/examples/CMakeLists.txt
@@ -3,8 +3,8 @@
 #=================================================================================================
 
 define_module_example(
-        NAME program_args_example
-        SOURCES program_args_example.cpp
+        NAME program_options_example
+        SOURCES program_options_example.cpp
         PUBLIC_INCLUDE_PATHS
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
         PUBLIC_LINK_LIBS "")
