refactor: Eliminates exceptions from scheduler functions
(cherry picked from commit cc8ddfe3fa3ac6f16227df287c05313b2c53c37b)

--- a/modules/common/realtime/CMakeLists.txt
+++ b/modules/common/realtime/CMakeLists.txt
@@ -6,13 +6,14 @@ declare_module(NAME realtime DEPENDS_ON_MODULES "base" DEPENDS_ON_EXTERNAL_PROJE
 
 # library sources
 set(SOURCES
-        src/realtime.cpp
+        src/schedule.cpp
         README.md
         include/grape/realtime/fifo_buffer.h
         include/grape/realtime/fixed_string.h
         include/grape/realtime/mpsc_queue.h
         include/grape/realtime/mutex.h
-        include/grape/realtime/realtime.h
+        include/grape/realtime/schedule.h
+        include/grape/realtime/system_error.h
         include/grape/realtime/thread.h)
 
 # library target
