--- a/modules/common/conio/tests/CMakeLists.txt
+++ b/modules/common/conio/tests/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 define_module_test(
         NAME tests
-        SOURCES program_args_tests.cpp
+        SOURCES program_options_tests.cpp
         PUBLIC_INCLUDE_PATHS
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
         PUBLIC_LINK_LIBS "")
