build: Introduces cmake-format
(cherry picked from commit 93faf4f20a2ffdb80415740d7c5282d0c59d5578)

--- a/modules/common/base/CMakeLists.txt
+++ b/modules/common/base/CMakeLists.txt
@@ -1,20 +1,19 @@
-#=================================================================================================
+# =================================================================================================
 # Copyright (C) 2023 GRAPE Contributors
-#=================================================================================================
+# =================================================================================================
 
-declare_module(NAME base DEPENDS_ON_MODULES "utils" DEPENDS_ON_EXTERNAL_PROJECTS "")
+declare_module(
+  NAME base
+  DEPENDS_ON_MODULES "utils"
+  DEPENDS_ON_EXTERNAL_PROJECTS "")
 
-set(SOURCES 
-  include/grape/exception.h
-  src/exception.cpp)
+set(SOURCES include/grape/exception.h src/exception.cpp)
 
 define_module_library(
-    NAME base 
-    SOURCES ${SOURCES}
-    PUBLIC_INCLUDE_PATHS
-      $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-      $<INSTALL_INTERFACE:include>
-    PUBLIC_LINK_LIBS grape::utils
-)
+  NAME base
+  SOURCES ${SOURCES}
+  PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+                       $<INSTALL_INTERFACE:include>
+  PUBLIC_LINK_LIBS grape::utils)
 
 add_subdirectory(examples)
