--- a/modules/common/ipc/apps/CMakeLists.txt
+++ b/modules/common/ipc/apps/CMakeLists.txt
@@ -1,10 +1,9 @@
-#=================================================================================================
+# =================================================================================================
 # Copyright (C) 2023 GRAPE Contributors
-#=================================================================================================
+# =================================================================================================
 
 define_module_executable(
-        NAME zenoh_router
-        SOURCES zenoh_router.cpp
-        PUBLIC_INCLUDE_PATHS
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
-        PUBLIC_LINK_LIBS grape::conio)
+  NAME zenoh_router
+  SOURCES zenoh_router.cpp
+  PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
+  PUBLIC_LINK_LIBS grape::conio)
