--- a/modules/common/utils/CMakeLists.txt
+++ b/modules/common/utils/CMakeLists.txt
@@ -1,9 +1,10 @@
-#=================================================================================================
+# =================================================================================================
 # Copyright (C) 2023 GRAPE Contributors
-#=================================================================================================
+# =================================================================================================
 
-declare_module(NAME utils 
-  ALWAYS_BUILD 
+declare_module(
+  NAME utils
+  ALWAYS_BUILD
   DEPENDS_ON_MODULES "" # **Note**: This module should not depend on any other module
   DEPENDS_ON_EXTERNAL_PROJECTS "")
 
@@ -11,25 +12,19 @@ declare_module(NAME utils
 configure_file(src/version.in ${CMAKE_CURRENT_SOURCE_DIR}/src/version_impl.h @ONLY)
 
 # library sources
-set(SOURCES
-        src/stacktrace.cpp
-        src/version.cpp
-        README.md
-        include/grape/utils/stacktrace.h
-        include/grape/utils/utils.h
-        include/grape/utils/version.h)
+set(SOURCES src/stacktrace.cpp src/version.cpp README.md include/grape/utils/stacktrace.h
+            include/grape/utils/utils.h include/grape/utils/version.h)
 
 # library target
 define_module_library(
-        NAME utils
-        PUBLIC_LINK_LIBS ""
-        PRIVATE_LINK_LIBS ""
-        SOURCES ${SOURCES}
-        PUBLIC_INCLUDE_PATHS
-            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-            $<INSTALL_INTERFACE:include>
-        PRIVATE_INCLUDE_PATHS ""
-        SYSTEM_PRIVATE_INCLUDE_PATHS "")
+  NAME utils
+  PUBLIC_LINK_LIBS ""
+  PRIVATE_LINK_LIBS ""
+  SOURCES ${SOURCES}
+  PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+                       $<INSTALL_INTERFACE:include>
+  PRIVATE_INCLUDE_PATHS ""
+  SYSTEM_PRIVATE_INCLUDE_PATHS "")
 
 # Subprojects
 add_subdirectory(tests)
