--- a/gbs/module_template/CMakeLists.txt
+++ b/gbs/module_template/CMakeLists.txt
@@ -1,26 +1,25 @@
-#=================================================================================================
+# =================================================================================================
 # Copyright (C) @year@ GRAPE Contributors
-#=================================================================================================
+# =================================================================================================
 
-declare_module(NAME @module@ DEPENDS_ON_MODULES "" DEPENDS_ON_EXTERNAL_PROJECTS "")
+declare_module(
+  NAME @module@
+  DEPENDS_ON_MODULES ""
+  DEPENDS_ON_EXTERNAL_PROJECTS "")
 
 # library sources
-set(SOURCES
-        src/@module@.cpp
-        README.md
-        include/grape/@module@/@module@.h)
+set(SOURCES src/@module@.cpp README.md include/grape/@module@/@module@.h)
 
 # library target
 define_module_library(
-        NAME @module@
-        PUBLIC_LINK_LIBS ""
-        PRIVATE_LINK_LIBS ""
-        SOURCES ${SOURCES}
-        PUBLIC_INCLUDE_PATHS
-            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-            $<INSTALL_INTERFACE:include>
-        PRIVATE_INCLUDE_PATHS ""
-        SYSTEM_PRIVATE_INCLUDE_PATHS "")
+  NAME @module@
+  PUBLIC_LINK_LIBS ""
+  PRIVATE_LINK_LIBS ""
+  SOURCES ${SOURCES}
+  PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+                       $<INSTALL_INTERFACE:include>
+  PRIVATE_INCLUDE_PATHS ""
+  SYSTEM_PRIVATE_INCLUDE_PATHS "")
 
 # Subprojects
 add_subdirectory(tests)
