--- a/gbs/module_template/examples/CMakeLists.txt
+++ b/gbs/module_template/examples/CMakeLists.txt
@@ -1,10 +1,9 @@
-#=================================================================================================
+# =================================================================================================
 # Copyright (C) @year@ GRAPE Contributors
-#=================================================================================================
+# =================================================================================================
 
 define_module_example(
-        NAME example
-        SOURCES example.cpp
-        PUBLIC_INCLUDE_PATHS
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
-        PUBLIC_LINK_LIBS "")
+  NAME example
+  SOURCES example.cpp
+  PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
+  PUBLIC_LINK_LIBS "")
