--- a/gbs/module_template/tests/CMakeLists.txt
+++ b/gbs/module_template/tests/CMakeLists.txt
@@ -1,10 +1,9 @@
-#=================================================================================================
+# =================================================================================================
 # Copyright (C) @year@ GRAPE Contributors
-#=================================================================================================
+# =================================================================================================
 
 define_module_test(
-        NAME tests
-        SOURCES tests.cpp
-        PUBLIC_INCLUDE_PATHS
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
-        PUBLIC_LINK_LIBS "")
+  NAME tests
+  SOURCES tests.cpp
+  PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
+  PUBLIC_LINK_LIBS "")
