build: Adds a single file to track dependency versions

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -8,16 +8,18 @@
 # configured and built at configuration time.
 # =================================================================================================
 
-cmake_minimum_required(VERSION 3.27.3)
+cmake_minimum_required(VERSION 3.28.0)
 project(grape-external LANGUAGES C CXX)
 
 find_package(Git REQUIRED)
 include(ExternalProject)
+include(${CMAKE_CURRENT_LIST_DIR}/third_party_versions.cmake)
 
-# --------------------------------------------------------------------------------------------------
+# -------------------------------------------------------------------------------------------------
 # Setup baseline build configuration
-# --------------------------------------------------------------------------------------------------
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/../cmake/modules/")
+# -------------------------------------------------------------------------------------------------
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
+                      "${CMAKE_CURRENT_SOURCE_DIR}/../cmake/modules/")
 set_directory_properties(PROPERTIES EP_UPDATE_DISCONNECTED 1) # skip update step
 
 # Collect common arguments to configure external projects
@@ -39,42 +41,66 @@ macro(add_dummy_target)
   endif()
 endmacro()
 
-# --------------------------------------------------------------------------------------------------
+# -------------------------------------------------------------------------------------------------
 # External projects follow
-# --------------------------------------------------------------------------------------------------
+# -------------------------------------------------------------------------------------------------
 
-# --------------------------------------------------------------------------------------------------
+# -------------------------------------------------------------------------------------------------
 # zenohcxx
+# TODO: Pin to specific version number when released
 if(zenohcxx IN_LIST EXTERNAL_PROJECTS_LIST)
-  # install zenoh-c first set(zenohc_VERION_REQUIRED 0.11.0.0)
-  find_package(zenohc QUIET) # ${zenohc_VERION_REQUIRED} QUIET)
+  # install zenoh-c first 
+  find_package(zenohc QUIET) # ${ZENOHC_VERSION_REQUIRED} QUIET)
   if(zenohc_FOUND)
     message(STATUS "zenohc: Using version ${zenohc_VERSION} from ${zenohc_DIR}")
     add_dummy_target(zenohc)
   else()
-    message(STATUS "zenohc: Building ${zenohc_VERION_REQUIRED} from source")
+    message(STATUS "zenohc: Building ${ZENOHC_VERSION_REQUIRED} from source")
     ExternalProject_Add(
       zenohc
       GIT_REPOSITORY "https://github.com/eclipse-zenoh/zenoh-c.git"
-      GIT_TAG main # v${zenohc_VERION_REQUIRED}
+      GIT_TAG main # TODO v${ZENOHC_VERSION_REQUIRED}
       GIT_SHALLOW true
       CMAKE_ARGS ${EP_CMAKE_EXTRA_ARGS} -DCMAKE_VERBOSE_MAKEFILE=ON)
   endif()
 
-  # set(zenohcxx_VERION_REQUIRED 0.11.0.0)
-  find_package(zenohcxx QUIET) # ${zenohcxx_VERION_REQUIRED} QUIET)
+  find_package(zenohcxx QUIET) # TODO ${ZENOHCXX_VERSION_REQUIRED} QUIET)
   if(zenohcxx_FOUND)
     message(STATUS "zenohcxx: Using version ${zenohcxx_VERSION} from ${zenohcxx_DIR}")
     add_dummy_target(zenohcxx)
   else()
-    message(STATUS "zenohcxx: Building ${zenohcxx_VERION_REQUIRED} from source")
+    message(STATUS "zenohcxx: Building ${ZENOHCXX_VERSION_REQUIRED} from source")
     ExternalProject_Add(
       zenohcxx
       GIT_REPOSITORY "https://github.com/eclipse-zenoh/zenoh-cpp.git"
-      GIT_TAG main # v${zenohcxx_VERION_REQUIRED}
+      GIT_TAG main # TODO v${ZENOHCXX_VERSION_REQUIRED}
       GIT_SHALLOW true
       SOURCE_SUBDIR install # configure the 'install' sub-project to avoid building zenoh-c again
       DEPENDS zenohc
       CMAKE_ARGS ${EP_CMAKE_EXTRA_ARGS})
+  endif()
+endif()
+
+# -------------------------------------------------------------------------------------------------
+# GLFW3
+if(glfw3 IN_LIST EXTERNAL_PROJECTS_LIST)
+  find_package(glfw3 ${GLFW3_VERSION_REQUIRED} QUIET)
+  if(glfw3_FOUND)
+    message(STATUS "GLFW3: Using version ${glfw3_VERSION} from ${glfw3_DIR}")
+    add_dummy_target(glfw3)
+  else()
+    message(STATUS "GLFW3: Building ${GLFW3_VERSION_REQUIRED} from source")
+    set(GLFW3_CMAKE_ARGS ${EP_CMAKE_EXTRA_ARGS} 
+    -DGLFW_BUILD_DOCS=OFF
+    -DGLFW_BUILD_EXAMPLES=OFF
+    -DGLFW_BUILD_TESTS=OFF
+    -DGLFW_BUILD_X11=ON
+    -DGLFW_BUILD_WAYLAND=ON)
+    ExternalProject_Add(
+      glfw3
+      GIT_REPOSITORY "https://github.com/glfw/glfw.git"
+      GIT_TAG ${GLFW3_VERSION_REQUIRED}
+      GIT_SHALLOW true
+      CMAKE_ARGS ${GLFW3_CMAKE_ARGS})
   endif()
 endif()
