--- a/modules/common/ipc/CMakeLists.txt
+++ b/modules/common/ipc/CMakeLists.txt
@@ -11,7 +11,7 @@ find_package(zenohc ${ZENOHC_VERSION_REQUIRED} REQUIRED)
 find_package(zenohcxx ${ZENOHCXX_VERSION_REQUIRED} REQUIRED)
 
 # library sources
-set(SOURCES include/grape/ipc/ipc.h src/ipc.cpp README.md)
+set(SOURCES include/grape/ipc/ipc.h README.md)
 
 # library target
 define_module_library(
